Fix Alembic database URL to match app config

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql+asyncpg://user:password@localhost:5432/meta_ai_db
+sqlalchemy.url = postgresql+asyncpg://meta_ai_user:StrongPassword123@localhost:5432/meta_ai_db
 
 [loggers]
 keys = root,sqlalchemy,alembic
