--- a/.github/workflows/deploy-meta-ai.yml
+++ b/.github/workflows/deploy-meta-ai.yml
@@ -24,23 +24,27 @@ jobs:
           ssh -o StrictHostKeyChecking=yes ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             set -e
             cd /var/www/projects/meta-ai-campaign
+
+            echo "▶ Pulling latest code"
+            git fetch origin
+            git reset --hard origin/main
+
+            echo "▶ Activating venv"
             source venv/bin/activate
 
-            echo "▶ Extracting DATABASE_URL from systemd"
+            echo "▶ Extracting DATABASE_URL from systemd (clean)"
             RAW_ENV=$(systemctl show meta-ai.service --property=Environment)
-            echo "RAW_ENV=$RAW_ENV"
-
-            export DATABASE_URL=$(echo "$RAW_ENV" \
-              | sed 's/Environment=//' \
+            DATABASE_URL=$(echo "$RAW_ENV" \
               | tr ' ' '\n' \
               | grep '^DATABASE_URL=' \
-              | sed 's/^DATABASE_URL=//')
+              | cut -d= -f2- \
+              | sed 's/^"//;s/"$//')
 
-            echo "▶ DATABASE_URL extracted (masked)"
-            echo "$DATABASE_URL" | sed 's/\/\/.*@/\/\/****@/'
+            export DATABASE_URL
 
-            echo "▶ Running Alembic"
+            echo "▶ Running Alembic migrations"
             alembic upgrade head
 
+            echo "▶ Restarting service"
             sudo systemctl restart meta-ai.service
-          EOF
+            sudo systemctl status meta-ai.service --no-pager
