--- a/frontend_next/package.json
+++ b/frontend_next/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+
+    "lucide-react": "0.344.0",
+    "react-hot-toast": "2.4.1",
+    "recharts": "2.10.4"
   },
   "devDependencies": {
     "typescript": "5.3.3",
