--- a/.github/workflows/deploy-meta-ai.yml
+++ b/.github/workflows/deploy-meta-ai.yml
@@ -22,18 +22,11 @@ jobs:
       - name: Deploy to VPS
         run: |
           ssh -o StrictHostKeyChecking=yes ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+            echo "DEPLOY USER:"
             whoami
-            set -e
-            cd /var/www/projects/meta-ai-campaign
-
-            echo "▶ Pulling latest code"
-            git fetch origin
-            git reset --hard origin/main
-
-            echo "▶ Activating venv"
-            source venv/bin/activate
-
-            echo "▶ Restarting service"
-            sudo systemctl restart meta-ai.service
-            sudo systemctl status meta-ai.service --no-pager
+            echo "PWD:"
+            pwd
+            ls -ld /var/www/projects/meta-ai-campaign
+            exit 1
           EOF
+
