--- a/frontend_next/tsconfig.json
+++ b/frontend_next/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": false,
     "skipLibCheck": true,
     "strict": true,
@@ -15,13 +19,17 @@
     "jsx": "preserve",
     "incremental": true,
 
-    // ⭐ ADD THESE 2 LINES ⭐
+    // ⭐ Added for import alias support
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     },
 
-    "plugins": [{ "name": "next" }]
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
@@ -29,5 +37,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
